--- a/Zeus/Base.lproj/ClientTypeVC.storyboard
+++ b/Zeus/Base.lproj/ClientTypeVC.storyboard
@@ -46,6 +46,9 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="tableView" destination="MoL-bG-4dB" id="IQq-kg-gRi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JFS-yZ-YK7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
